--- a/.github/workflows/challenge.yml
+++ b/.github/workflows/challenge.yml
@@ -9,13 +9,13 @@ jobs:
                 runs-on: ubuntu-latest 
                 steps: 
                  - name: step 1
-                 - run: date
+                   run: date
         job2:
                 name: Second Job
                 runs-on: windows-latest
                 steps:
                  - name: step 2
-                 - run: Get-Date
+                   run: Get-Date
 
         job3:
                 name: Third Job
